# autodatalab-env

./: Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  validate_submission.py
data_cleaning_env/: README.md  __init__.py  baseline_inference.py  client.py  episode_report.py  graders.py  models.py  openenv.yaml  plot_artifacts.py  pyproject.toml
data_cleaning_env/server/: app.py  data_cleaning_env_environment.py  requirements.txt
data_cleaning_env/tasks/easy/: metadata.json
data_cleaning_env/tasks/expert/: metadata.json  raw.csv
data_cleaning_env/tasks/hard/: ground_truth.csv  metadata.json
data_cleaning_env/tasks/medium/: ground_truth.csv  metadata.json  raw.csv
data_cleaning_env/tasks/medium_plus/: ground_truth.csv  metadata.json
server/: __init__.py  app.py
